# Key-BNC

./: .gitignore  BUILDING.md  CHANGELOG.md  KEY_BNC_app.py  Key_BNC.code-workspace  LL_OR_BNC.py  README.md  altgraph-0.11-py3.4.egg  generate_BNC_wordlist.py  macholib-1.6-py3.4.egg  requirements.txt  setup.py  setup_mac.py  setup_win.py
KEY_BNC/: KEY_BNC.py  __init__.py  constants.py  corpus.py  corpus_part.py  dispersion.py  functions.py  ui.py  windows.py
KEY_BNC/Data/: About Short.txt  About.txt  Help.txt
KEY_BNC/stats/: dispersion.py  log_likelyhood.py  odds_ratio.py
LL_OR_BNC/: LLORBNCer.py  Readme.md  __init__.py  functions.py  ui.py
Sample Data/: 1.txt
iconography/: key-bnc-logo.ai
key_bnc/: README.md  package.json
key_bnc/src/: lib.rs
key_bnc/www/: .editorconfig  .env.production  .eslintignore  README.md  package.json  tsconfig.json  vue.config.js
key_bnc/www/public/: index.html
key_bnc/www/src/: App.vue  models.ts  registerServiceWorker.ts
key_bnc/www/src/components/: About.vue  BasicButton.vue  BncLoader.vue  Dropdown.vue  DropdownPosition.ts  Interface.vue  ManageCorpus.vue  RefreshApp.vue  StatFilters.vue  WordStats.vue  WordStatsTable.vue
key_bnc/www/src/lang/: wordStats.ts
key_bnc/www/src/services/: csv.ts
key_bnc_cli/: Cargo.toml
key_bnc_cli/src/: bnc_data.rs  main.rs
key_bnc_utils/sample_data/parts/: 3.txt
key_bnc_utils/src/: lib.rs  stats.rs  stats_test.rs  utils.rs
key_bnc_web/: .env  .eslintignore  .eslintrc.js  README.md  index.html  package.json  stylelint.config.js  tsconfig.json  vite.config.ts
key_bnc_web/key_bnc_wasm/: Cargo.toml
key_bnc_web/key_bnc_wasm/src/: indexeddb.rs  lib.rs
key_bnc_web/pdf_text_wasm/: Cargo.toml
key_bnc_web/pdf_text_wasm/src/: lib.rs  main.rs  totext.rs
key_bnc_web/src/: App.vue  main.ts  models.ts
key_bnc_web/src/components/: About.vue  BncLoader.vue  Dropdown.vue  Interface.vue  ManageCorpus.vue  RefreshApp.vue
key_bnc_web/src/components/WordStats/: SortButton.vue  StatFilters.vue  WordStats.vue  WordStatsTable.vue  filters.ts
key_bnc_web/src/components/buttons/: BasicButton.vue  NavButton.vue
key_bnc_web/src/components/changelog/: ChangelogViewer.vue  SingleRelease.vue  changelog.ts  useChangelog.ts
key_bnc_web/src/hooks/: useDialog.ts
key_bnc_web/src/lang/: wordStats.ts
key_bnc_web/src/polyfills/: dialog.ts
key_bnc_web/src/services/: pdf.ts
key_bnc_web/src/typings/: globals.d.ts
key_bnc_web/src/util/: asyncFileReader.ts
py2app-0.8-py3.4.egg/EGG-INFO/: entry_points.txt
rust/key_bnc/: Cargo.toml  Key_BNC.code-workspace  README.md
rust/key_bnc/sample_data/: long.txt
rust/key_bnc/src/: Key_BNC.code-workspace  lib.rs  main.rs
rust/key_bnc/src/pre_tokenizer/: key_bnc_split.rs  key_bnc_split_bench.rs  key_bnc_split_test.rs  mod.rs
rust/key_bnc/src/tokenizer/: key_bnc_split.rs  key_bnc_split_bench.rs  key_bnc_split_test.rs  mod.rs
rust/key_bnc/www/: .eslintrc.js  README.md  package.json  vue.config.js
rust/key_bnc/www/public/: index.html
rust/key_bnc/www/src/: App.vue  shims-vue.d.ts
rust/key_bnc_cli/: tmp.txt
rust/key_bnc_cli/src/: main.rs
rust/key_bnc_utils/: Cargo.toml
rust/key_bnc_utils/sample_data/: 1.txt  2.txt  4.txt  5.txt
rust/key_bnc_utils/sample_data/parts/: 1.txt
rust/key_bnc_utils/src/: lib.rs  stats.rs  stats_test.rs  utils_test.rs
rust/key_bnc_utils/src/benches/: mod.rs
rust/public/: about.html  index.html
rust/public/css/: main.css
rust/wasm-test-project/: Cargo.toml  LICENSE_MIT
rust/wasm-test-project/src/: lib.rs
tests/: tests.py
tests/Data/: Cayuga-Finite-State-Morphology.txt  Japanese.txt
(+16 files in other folders)
