[package]
name = "key_bnc_cli"
version = "0.1.0"
authors = ["dougalg <dougalg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
walkdir = "2.3.1"
counter = "0.4.3"
unicase = "2.6.0"
key_bnc_utils = { path = "../key_bnc_utils" }
