[package]
name = "key_bnc_wasm"
version = "1.3.0"
authors = ["dougalg <dougalg@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
counter = "0.4.3"
csv = "1.1.3"
unicase = "2.6.0"
js-sys = "0.3.37"
unicase_serde = "0.1.0"
key_bnc_utils = { path = "../../key_bnc_utils" }
serde = "^1.0.59"
serde_derive = "^1.0.59"
futures = "0.1"
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3", features = [ "FileReader", "Blob", "console" ] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

# For PDF reading
pdf = { git = "https://github.com/pdf-rs/pdf", features = [ "euclid" ] }
pdf_encoding = "*"
euclid = "0.22.6"
log = "*"
# Note that chrono is used internally by the PDF crate, so this
# version number should be kept in sync with that...
chrono = { version = "0.4.19", features = [ "wasmbind", "serde" ] }
indexed_db_futures = "0.2.1"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
